# MHacks2025

./: .gitignore  README.md  coco_classes.txt
enforcar-website/: README.md  demo.html  index.html
enforcar-website/assets/css/: style.css
enforcar-website/assets/js/: script.js
project/Crop/Assets/: Scene.scene
project/Crop/Assets/Materials/: Green 2.mat
project/Crop/Assets/Prefabs/: Scanner.prefab
project/Crop/Assets/Scripts/: AutoLicensePlateScanner.ts  CaptionBehavior.ts  ChatGPT.ts  PictureBehavior.ts  endpoint.py
project/backend/: .gitignore  DOCKER-REGISTRY.md  Dockerfile  README-Docker.md  README.md  docker-build.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test-ui.html  test_base64.py  test_base64_body.py
project/backend/api/: index.py
project/backend/coppa/: __init__.py  main.py  model.py  vercel_main.py  vercel_model.py
project/backend/images/: b64.txt
project/backend/sql/: data.sql  schema.sql
project/coppa-ai-pool/Assets/: Scene.scene
project/coppa-ai-pool/Assets/Models/: LicensePlateModel.onnx
project/coppa-ai-pool/Assets/Scripts/: CameraService.ts  PoolTablePredictor.ts
project/coppa-ai-pool/Assets/Scripts/ML/: DetectionController.ts  MLController.ts
project/coppa-ai/Workspaces/Default/: Layout.yaml  Snap_Plugin_Gui_AssetBrowser_cd11ace2-8507-4965-a068-d85c26031a6b.yaml  Snap_Plugin_Gui_PreviewPanel_52fc2a95-41a3-427b-a138-1e00eb1c405e.yaml  Snap_Plugin_Gui_SceneHierarchyEditor_6778142c-0629-4c2a-afc3-92a65ce29e1a.yaml
project/ml-starter/: ml-starter.esproj
project/ml-starter/Assets/: Scene.scene
(+2 files in other folders)
