[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-fastapi-app"
version = "0.1.0"
description = "A FastAPI application"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest", 
    "black", 
    "flake8",
    "mypy"
]

[tool.setuptools.packages.find]
# This tells setuptools to find packages in the current directory
# instead of looking in src/
where = ["."]
include = ["my_app*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true